fix: dark mode tooltip

--- a/ssg/sass/style.scss
+++ b/ssg/sass/style.scss
@@ -35,6 +35,10 @@
   display: inline-block;
   border-bottom: 1px dotted black;
   cursor: pointer;
+
+  html[data-theme="dark"] & {
+    border-bottom: 1px dotted #cfcfcf;
+  }
 }
 
 .tooltiptext {
@@ -58,7 +62,9 @@
 
   // Adapt for data-theme=dark on html
   html[data-theme="dark"] & {
+    color: #cfcfcf;
     background: rgba(32, 32, 32, 0.8);
+    border: solid rgba(32, 32, 32, 0.8) 1px;
     box-shadow: inset 0 0 60px rgba(32, 32, 32, 0.8),
       0 8px 32px rgba(0, 0, 0, 0.2);
   }
